# codex-usage-meter

./: .gitignore  PRIVACY.md  PRODUCT.md  README.md  design-qa.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release-windows.yml  release.yml
app-store-assets/: store-preview.html  store-shots.html
app-store-review/: README.md
app-store-review/Token Meter Review Sample/: auth.json
app-store-review/Token Meter Review Sample/sessions/: review-demo.jsonl
docs/: DEVELOPMENT.md  RELEASE.md
scripts/: build-app-store.mjs  claude-statusline.mjs  install-claude.mjs  launch.mjs
src/: App.tsx  bee-motion-contract.json  data.ts  format.ts  styles.css  subscription.ts  tauri-plugin-iap.d.ts  types.ts
src-tauri/: Cargo.toml  Entitlements.appstore.plist  Info.plist  tauri.appstore.conf.json  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  macos_native_renderer.rs  macos_store.rs  main.rs
